--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600,700,300i,600i,700i|Raleway:600,800");
-
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i);
 /*
 	Paradigm Shift by HTML5 UP
 	html5up.net | @ajlkn
@@ -29,9 +29,94 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
 
+	/* Variables */
+	:root {
+	  --deep-blue: #1e3470;
+	  --speed3: cubic-bezier(0.26, 0.48, 0.08, 0.9);
+	  --height: 40px;
+	  --bg: #00a6eb;
+	}
 body {
 	line-height: 1;
 }
+
+.language-switcher {
+	position: relative;
+	display: inline-block;
+	width: calc(var(--height) * 2);
+	height: var(--height);
+	transform: translateY(40%);
+	transition: transform 0.17s var(--speed3);
+  }
+  
+  .language-switcher input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+  }
+  
+  .language-switcher .select-fr,
+  .language-switcher .select-en {
+	position: absolute;
+	font-size: calc(var(--height) / 2.5);
+	top: calc(var(--height) / 4);
+	color: #fff;
+	mix-blend-mode: difference;    
+  }
+  
+  .language-switcher .select-fr {
+	left: calc(var(--height) / 3.5);
+  }
+  
+  .language-switcher .select-en {
+	right: calc(var(--height) / 4);
+  }
+  
+  /* The slider */
+  .language-switcher .slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: var(--deep-blue);
+	box-shadow: 0 3px 64px rgba(var(--deep-blue), 0.1);
+	transition: 0.4s;
+  }
+  
+  .language-switcher .slider:before {
+	position: absolute;
+	content: "";
+	height: var(--height);
+	width: var(--height);
+	left: 0;
+	bottom: 0;
+	background-color: white;
+	box-shadow: 0 3px 64px rgba(var(--deep-blue), 0.16);
+	transition: 0.4s;
+  }
+  
+  .language-switcher input:checked + .slider {
+	background-color: var(--deep-blue);
+  }
+  
+  .language-switcher input:focus + .slider {
+	box-shadow: none;
+  }
+  
+  .language-switcher input:checked + .slider:before {
+	transform: translateX(var(--height));
+  }
+  
+  /* Rounded sliders */
+  .language-switcher .slider.round {
+	border-radius: var(--height);
+  }
+  
+  .language-switcher .slider.round:before {
+	border-radius: 50%;
+  }
 
 ol, ul {
 	list-style: none;
